# furuyoni

./: .gitignore  Cargo.toml
furuyoni_client/: Cargo.toml  README.md
furuyoni_client/assets/scenes/: main_scene.scn.ron
furuyoni_client/src/: game_logic.rs  main.rs  systems.rs
furuyoni_client/src/game_logic/: mod.rs
furuyoni_client/src/networking/: game_message_receiver.rs  message_manager.rs  mod.rs
furuyoni_client/src/networking/post_office/: mod.rs
furuyoni_client/src/systems/: board_plugin.rs  board_system.rs  display_board.rs  mod.rs  picker.rs
furuyoni_client/src/systems/board_plugin/: hand_animator.rs  requests_handler.rs  spread_plugin.rs  spread_system.rs
furuyoni_client/src/systems/board_system/: labels_update_system.rs  relative_positions.rs  requests_handler.rs
furuyoni_client/src/systems/picker/: mod.rs
furuyoni_client/src/systems/player/: mod.rs
furuyoni_lib/: Cargo.toml
furuyoni_lib/src/: attack.rs  events.rs  lib.rs  player_actions.rs
furuyoni_lib/src/cards/internal/: mod.rs  yurina.rs
furuyoni_lib/src/messages/: mod.rs  parse_helper.rs
furuyoni_lib/src/net/: connection.rs  frames.rs  message_channel.rs  message_receiver.rs  message_sender.rs  mod.rs  requester.rs  responder.rs  responser.rs  with_send_callback.rs
furuyoni_lib/src/net/connection/: mod.rs  read.rs  write.rs
furuyoni_lib/src/net/frames/: base.rs  client.rs  error.rs  game.rs  lobby.rs  mod.rs  server.rs
furuyoni_lib/src/players/: cli_player.rs  idle_player.rs  mod.rs  player.rs
furuyoni_lib/src/rules/: attack.rs  cards.rs  condition.rs  effects.rs  events.rs  mod.rs  player_actions.rs  states.rs
furuyoni_lib/src/rules/cards/: mod.rs
furuyoni_lib/src/rules/cards/internal/: mod.rs  yurina.rs
furuyoni_lib/src/rules/states/: mod.rs  petals.rs  players_data.rs  state_view.rs  viewable_player_states.rs
furuyoni_server/: Cargo.toml
furuyoni_server/src/: game.rs  game_watcher.rs  main.rs  main_channels.rs  players.rs
furuyoni_server/src/furuyoni/: mod.rs  player.rs
furuyoni_server/src/furuyoni/game/: attack.rs  player_actions.rs
furuyoni_server/src/furuyoni/game/cards/: yurina.rs
furuyoni_server/src/furuyoni/players/: mod.rs
furuyoni_server/src/game/: board_state.rs  game_controlflow.rs  game_recorder.rs  mod.rs  observable_game.rs  petals.rs  phase_state.rs  player_state.rs
furuyoni_server/src/game/states/: board_state.rs  game_state.rs  mod.rs  phase_state.rs  player_state.rs
furuyoni_server/src/networking/: game_communication_mananger.rs  game_connection.rs  game_player_connection.rs  game_to_player_connection.rs  message_sender.rs  mod.rs  post_office.rs
furuyoni_server/src/networking/post_office/: mod.rs
furuyoni_server/src/players/: cli_player.rs  idle_player.rs  player.rs  remote_player.rs
furuyoni_server/src/remote_player/: mod.rs
src/: main.rs
src/furuyoni/: idle_player.rs  mod.rs  player.rs
src/furuyoni/game/: attack.rs  condition.rs  mod.rs  petals.rs  player.rs  player_actions.rs
src/furuyoni/game/cards/: mod.rs  yurina.rs
src/furuyoni/game_runner/: attack.rs  condition.rs  effects.rs  game.rs  mod.rs
src/furuyoni/game_runner/cards/: mod.rs  yurina.rs
src/furuyoni/players/: cli_player.rs  idle_player.rs  mod.rs
