[package]
name = "furuyoni_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
async-trait = "0.1.58"
enum_dispatch = "0.3.8"
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }
