[package]
name = "furuyoni_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34", features = ["full"] }
furuyoni_lib = { path = "../furuyoni_lib" }
rand = "0.8.5"
thiserror = "1.0"
bevy = { version = "0.12" }
bevy_editor_pls = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-lite = "2.0"
bevy-tokio-tasks = { version = "0.12", git = "https://github.com/Jaewookim08/bevy-tokio-tasks.git" }
