[package]
name = "furuyoni_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
furuyoni_lib = { path = "../furuyoni_lib" }
rand = "0.8.5"
thiserror = "1.0"
bevy = { version = "0.14" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-lite = "2.3"
bevy-tokio-tasks = { version = "0.14", git = "https://github.com/Jaewookim08/bevy-tokio-tasks.git" }
bevy_tweening = { version = "0.11.0", features = ["bevy_asset", "bevy_sprite", "bevy_ui", "bevy_text"] }
bevy-inspector-egui = { version="0.25", features = ["highlight_changes", "bevy_pbr"]}