[package]
name = "furuyoni_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0"
async-trait = "0.1.74"
derive_more = "0.99"
enum_dispatch = "0.3"
futures = "0.3"
tokio = { version = "1.38", features = ["full"] }
furuyoni_lib = { path = "../furuyoni_lib" }
rand = "0.8.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
